<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.application.spokn.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="#0680f9">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:src="@drawable/spokn_logo_light_gray_updated_5"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="#FFFFFF"
            android:maxLines="1"
            android:textColor="#7F8C8D"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:layout_margin="5dp"
            android:id="@+id/email"
            android:ems="15"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="#FFFFFF"
            android:maxLines="1"
            android:textColor="#7F8C8D"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:layout_margin="5dp"
            android:id="@+id/password"
            android:ems="15"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFF"
            android:layout_margin="5dp"
            android:id="@+id/loginBtn"
            android:text="@string/login"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newUser"
            android:textColor="#FFFFFF"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="#FFFFFF"
            android:text="@string/forgotpass"/>
    </LinearLayout>

</LinearLayout>
